Fixed css on mobile devices

--- a/src/sources/css/index.css
+++ b/src/sources/css/index.css
@@ -5,9 +5,79 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f3f3;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.model {
+  background-color: #fff;
+  margin: 5px;
+  height: 250px;
+  cursor:pointer;
+}
+.container {
+  width: 80%;
+  margin: auto;
+}
+figure {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+.title {
+  text-align: center;
+  font-weight: 700;
+    letter-spacing: -0.03em;
+    line-height: 1.05;
+}
+#imgArticle {
+  float: left;
+}
+.hd-Image {
+  width: 100%;
+  height: 100px;
+}
+
+@media only screen and (max-width: 600px) {
+  /* For mobile phones: */
+  .model {
+    background-color: #fff;
+    margin-bottom: 5px;
+    height: auto;
+    padding-bottom: 9px;
+    display: block;
+    text-align: center;
+  }
+  article > figure {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+  }
+  .hd-Image {
+    width: 100%;
+    height: 100px;
+  }
+  #imgArticle {
+    height: 100%;
+    width: 100%;
+    float: 0px;
+  }
+  .container {
+    width: 100vw;
+    margin: auto;
+  }
+  .title {
+    font-weight: 700;
+    letter-spacing: -0.03em;
+    line-height: 1.05;
+    overflow: initial;
+    height: auto;
+    word-wrap: break-word
+
+  }
 }
